policies/disallow-host-ports.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
  annotations:
    policies.kyverno.io/title: Disallow hostPorts
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      field is unset or set to `0`.
spec:
  background: true
  failurePolicy: Ignore
  validationFailureAction: audit
  rules:
    - name: host-ports-none
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort and
          spec.initContainers[*].ports[*].hostPort must either be unset or set to `0`.
        pattern:
          spec:
            =(initContainers):
              - =(ports):
                  - =(hostPort): 0
            containers:
              - =(ports):
                  - =(hostPort): 0
      exclude:
        any:
          - resources:
              namespaces:
                - conntrack-stats-exporter
              selector:
                matchLabels:
                  app: conntrack-stats-exporter
