policies/require-group-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root-groups
  annotations:
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.3.6
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers should be forbidden from running with a root primary or supplementary GID.
      This policy ensures the `runAsGroup`, `supplementalGroups`, and `fsGroup` fields are set to a number
      greater than zero (i.e., non root). A known issue prevents a policy such as this
      using `anyPattern` from being persisted properly in Kubernetes 1.23.0-1.23.2.
spec:
  background: true
  failurePolicy: Ignore
  validationFailureAction: audit
  rules:
    - name: check-runasgroup
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Running with root group IDs is disallowed. The fields
          spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup
          and spec.initContainers[*].securityContext.runAsGroup must be unset or set to
          a value greater than zero.
        pattern:
          spec:
            =(securityContext):
              =(runAsGroup): ">0"
            =(initContainers):
              - (name): "!istio-init"
                =(securityContext):
                  =(runAsGroup): ">0"
            containers:
              - =(securityContext):
                  =(runAsGroup): ">0"
      exclude:
        any:
          - resources:
              namespaces:
                - conntrack-stats-exporter
              selector:
                matchLabels:
                  app: conntrack-stats-exporter
    - name: check-supplementalgroups
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Containers cannot run with a root primary or supplementary GID. The field
          spec.securityContext.supplementalGroups must be unset or
          set to a value greater than zero.
        pattern:
          spec:
            =(securityContext):
              =(supplementalGroups): ">0"
    - name: check-fsgroup
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Containers cannot run with a root primary or supplementary GID. The field
          spec.securityContext.fsGroup must be unset or set to a value greater than zero.
        pattern:
          spec:
            =(securityContext):
              =(fsGroup): ">0"
